# rss-feed-app

./: .gitignore  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
server/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  rss_reader.db  start.sh  vercel.json
server/alembic/: env.py
server/alembic/versions/: 27e919be9532_initial_migration.py  5be6487674ab_update_articlecontent_model_with_plain_.py  5c9e5dacb180_rename_feeds_to_sources_and_feed_.py  c669f81ae760_add_articlecontent_model.py
server/app/: db.py  main.py
server/app/feeds/: models.py  routes.py  schemas.py  services.py  utils.py
server/app/jobs/: scheduler.py
src/: index.css  routeTree.gen.ts
src/components/: AddFeedButton.tsx  AddFeedModal.tsx  AllModals.tsx  ArticleCard.tsx  ArticleView.tsx  ArticlesList.tsx  FeedCard.tsx  FeedsBar.tsx  FeedsList.tsx  RefreshFeedButton.tsx  RenderHTML.tsx  SettingsButton.tsx  SettingsModal.tsx
src/components/button/: index.tsx
src/components/dark-mode/: ThemeScript.tsx  ThemeToggle.module.css  ThemeToggle.tsx  context.tsx  index.ts  useDarkMode.ts  utils.ts
src/components/form/: form.module.css  index.tsx
src/components/form/textarea/: textarea.module.css
src/hooks/: useQuery.ts  useRSSFeed.ts  useReadingSettings.ts
src/lib/: constants.ts  rssParser.ts  toast.ts  types.ts  utils.ts
src/routes/: __root.tsx  index.tsx
src/routes/feed/$slug/: index.tsx
src/routes/feed/$slug/article/$article-slug/: index.tsx  page.tsx
src/stores/: feedStore.ts  store.ts
