[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Abhishek Barve <barveabhishek.ab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
