[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Abhishek Barve <barveabhishek.ab@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}
feedparser = "^6.0.11"
sqlalchemy = "^2.0.43"
pydantic = "^2.11.7"
apscheduler = "^3.11.0"
alembic = "^1.16.4"
trafilatura = "^2.0.0"
requests = "^2.32.5"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
